<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" />
    <string name="name" />
    <string name="my_profile" />
    <string name="student_id" />
    <string name="course">\n</string>
    <string name="edit" />
    <string name="save" />
    <string name="home" />
    <string name="schedule" />
    <string name="assignments">\n</string>
    <string name="map" />
    <string name="profile" />
</resources>