<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/baseline_schedule_24"
        android:title="@string/schedule" />

    <item
        android:id="@+id/nav_assignments"
        android:icon="@drawable/baseline_assignment_24"
        android:title="@string/assignments" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/map" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_manage_accounts_24"
        android:title="@string/profile" />

</menu>
